# proxmox-docker

./: .gitignore
Dev/: .vscode-extensions.json  WORKSPACE_INDEX.md  WORKSPACE_LAYOUT.md  WORKSPACE_ORGANIZATION_COMPLETE.md  tasks-config.json  workspace.code-workspace
Dev/active/proxmox-docker/: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  BITWARDEN-SSH-CONNECTION.md  COPILOT-DEPLOYMENT-INSTRUCTIONS.md  COPILOT-MCP-INTEGRATION-GUIDE.md  Dockerfile  FINAL-SUMMARY.md  GITHUB-SECRETS-CONFIGURATION.md  IMPLEMENTATION-COMPLETE.md  INDEX.md  INSTALLATION.md  MCP-CONNECTION-METHODS.md  Makefile  PROXMOX-SSH-SETUP.md  QUICK-START.md  README.md  SETUP-COMPLETE.md  SSH-TOKEN-AUTHENTICATION.md  START-HERE.md  USER-GUIDE.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  setup.sh
