[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-personal-data-platform"
dynamic = ["version"]
description = "Comprehensive Proxmox VE management workspace with CLI tools, automation, monitoring, and optional Azure/M365 integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bryan's Revision", email = "info@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "proxmoxer>=2.0.0",
    "requests>=2.31.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "jinja2>=3.1.0",
    "GitPython>=3.1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
azure = [
    "azure-identity>=1.15.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-sql>=4.0.0",
    "azure-mgmt-keyvault>=10.0.0",
    "azure-keyvault-secrets>=4.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/bryansrevision/proxmox-personal-data-platform"
Repository = "https://github.com/bryansrevision/proxmox-personal-data-platform"
Issues = "https://github.com/bryansrevision/proxmox-personal-data-platform/issues"
Documentation = "https://github.com/bryansrevision/proxmox-personal-data-platform/tree/main/docs"

[project.scripts]
pxmgr = "pxmgr.cli:app"

[tool.setuptools]
packages = ["pxmgr"]

[tool.setuptools.package-dir]
pxmgr = "src/pxmgr"

[tool.setuptools.dynamic]
version = {attr = "pxmgr.__version__"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
