[metadata]
name = proxmox-ve-workspace
version = attr: pxmgr.__version__
description = Comprehensive Proxmox VE management workspace with CLI tools, automation, and monitoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryansrevision/proxmox-ve-workspace
author = Bryan's Revision
author_email = info@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration
    Topic :: System :: Monitoring

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    proxmoxer>=2.0.0
    requests>=2.31.0
    typer[all]>=0.9.0
    rich>=13.0.0
    pydantic>=2.0.0
    pydantic-settings>=2.0.0
    PyYAML>=6.0.0
    python-dotenv>=1.0.0
    tabulate>=0.9.0
    jinja2>=3.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pxmgr = pxmgr.cli:app

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    env,
    pxmgr_old
